--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,13 @@
     - Extra: Make the corners rounded
 */
 button {
-    font-size: 5px;
+    background-color: #FF69B4;
+    color: #fff;
+    padding: 10px;
+    font-size: 16px;
     cursor: pointer;
     transition: transform 0.3s, background-color 0.3s, font-size 0.3s;
+    border-radius: 6px;
 }
 
 /* 
@@ -20,7 +24,8 @@ button {
     - Set the font size to 18px
 */
 button:hover {
-    
+    background-color: #8B008B;
+    font-size: 18px;
 }
 
 button:active {
